fix: apply button always visible & smartlinks moved under enabled switch in IntegrationForm

--- a/src/components/IntegrationsView/IntegrationForm/IntegrationForm.module.css
+++ b/src/components/IntegrationsView/IntegrationForm/IntegrationForm.module.css
@@ -5,8 +5,9 @@
 }
 
 .disabledButton {
-  opacity: 0.8;
+  /* opacity: 0.8; */
   cursor: not-allowed;
+  backdrop-filter: blur(1000px);
 }
 
 .DockerIcon {
